--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,8 +33,7 @@ div{
     border: solid 3px palevioletred;
     margin: 8px;
     text-align: center;
-    width: 25%;
-}
+    width: 25%;}
 
 body{
     display: flex;
